releases/1.9.3/lists/loot_tables/chests/simple_dungeon.md
| Name                             | Count | Chance | Comment         |
| -------------------------------- | ----- | ------ | --------------- |
| 1 to 3 time                      |    -- |     -- |                 |
| minecraft:saddle                 |     1 |  15.7% |                 |
| minecraft:golden_apple           |     1 |  11.8% |                 |
| minecraft:enchanted_golden_apple |     1 |   1.6% |                 |
| minecraft:record_13              |     1 |  11.8% |                 |
| minecraft:record_cat             |     1 |  11.8% |                 |
| minecraft:name_tag               |     1 |  15.7% |                 |
| minecraft:golden_horse_armor     |     1 |   7.9% |                 |
| minecraft:iron_horse_armor       |     1 |  11.8% |                 |
| minecraft:diamond_horse_armor    |     1 |   3.9% |                 |
| minecraft:enchanted_book         |     1 |   7.9% | enchantments: * |
|                                  |       |        |                 |
| 1 to 4 time                      |    -- |     -- |                 |
| minecraft:iron_ingot             |  1..4 |     8% |                 |
| minecraft:gold_ingot             |  1..4 |     4% |                 |
| minecraft:bread                  |     1 |    16% |                 |
| minecraft:wheat                  |  1..4 |    16% |                 |
| minecraft:bucket                 |     1 |     8% |                 |
| minecraft:redstone               |  1..4 |    12% |                 |
| minecraft:coal                   |  1..4 |    12% |                 |
| minecraft:melon_seeds            |  2..4 |     8% |                 |
| minecraft:pumpkin_seeds          |  2..4 |     8% |                 |
| minecraft:beetroot_seeds         |  2..4 |     8% |                 |
|                                  |       |        |                 |
| 3 time                           |    -- |     -- |                 |
| minecraft:bone                   |  1..8 |    25% |                 |
| minecraft:gunpowder              |  1..8 |    25% |                 |
| minecraft:rotten_flesh           |  1..8 |    25% |                 |
| minecraft:string                 |  1..8 |    25% |                 |